--- a/public/02-catalog-item.html
+++ b/public/02-catalog-item.html
@@ -1343,8 +1343,8 @@
 					</div>
 				</div>
 			</div>
-			<!-- start sBlogSlider-->
-			<section class="sBlogSlider section" id="sBlogSlider">
+			<!-- start sHit-->
+			<section class="sHit section">
 				<div class="container sliderAutoWidthWrap">
 					<div class="section-title">
 						<div class="row">
@@ -1404,10 +1404,7 @@
 									</div>
 									<div class="product-card__buttons">
 										<div class="product-card__add-buttons">
-											<button class="product-card__to-cart">
-												<svg class="icon icon-cartplus ">
-													<use xlink:href="img/svg/sprite.svg#cartplus"></use>
-												</svg><span>В корзину</span>
+											<button class="product-card__analog">Подобрать аналог
 											</button>
 											<button class="product-card__to-bookmarks" title="В закладки">
 												<svg class="icon icon-bookmarks ">
@@ -1420,12 +1417,9 @@
 												</svg>
 											</button>
 										</div>
-										<button class="product-card__to-buy" title="Купить в один клик">
-											<svg class="icon icon-oneclick ">
-												<use xlink:href="img/svg/sprite.svg#oneclick"></use>
-											</svg><span>Купить в 1 клик</span>
+										<button class="product-card__notify">Сообщить о поступлении
 										</button>
-										<div class="product-card__availability">В наличии
+										<div class="product-card__unavailability">Нет наличии
 										</div>
 									</div>
 								</div>
@@ -1526,10 +1520,7 @@
 									</div>
 									<div class="product-card__buttons">
 										<div class="product-card__add-buttons">
-											<button class="product-card__to-cart">
-												<svg class="icon icon-cartplus ">
-													<use xlink:href="img/svg/sprite.svg#cartplus"></use>
-												</svg><span>В корзину</span>
+											<button class="product-card__analog">Подобрать аналог
 											</button>
 											<button class="product-card__to-bookmarks" title="В закладки">
 												<svg class="icon icon-bookmarks ">
@@ -1542,12 +1533,9 @@
 												</svg>
 											</button>
 										</div>
-										<button class="product-card__to-buy" title="Купить в один клик">
-											<svg class="icon icon-oneclick ">
-												<use xlink:href="img/svg/sprite.svg#oneclick"></use>
-											</svg><span>Купить в 1 клик</span>
+										<button class="product-card__notify">Сообщить о поступлении
 										</button>
-										<div class="product-card__availability">В наличии
+										<div class="product-card__unavailability">Нет наличии
 										</div>
 									</div>
 								</div>
@@ -1648,10 +1636,7 @@
 									</div>
 									<div class="product-card__buttons">
 										<div class="product-card__add-buttons">
-											<button class="product-card__to-cart">
-												<svg class="icon icon-cartplus ">
-													<use xlink:href="img/svg/sprite.svg#cartplus"></use>
-												</svg><span>В корзину</span>
+											<button class="product-card__analog">Подобрать аналог
 											</button>
 											<button class="product-card__to-bookmarks" title="В закладки">
 												<svg class="icon icon-bookmarks ">
@@ -1664,12 +1649,9 @@
 												</svg>
 											</button>
 										</div>
-										<button class="product-card__to-buy" title="Купить в один клик">
-											<svg class="icon icon-oneclick ">
-												<use xlink:href="img/svg/sprite.svg#oneclick"></use>
-											</svg><span>Купить в 1 клик</span>
+										<button class="product-card__notify">Сообщить о поступлении
 										</button>
-										<div class="product-card__availability">В наличии
+										<div class="product-card__unavailability">Нет наличии
 										</div>
 									</div>
 								</div>
@@ -1770,10 +1752,7 @@
 									</div>
 									<div class="product-card__buttons">
 										<div class="product-card__add-buttons">
-											<button class="product-card__to-cart">
-												<svg class="icon icon-cartplus ">
-													<use xlink:href="img/svg/sprite.svg#cartplus"></use>
-												</svg><span>В корзину</span>
+											<button class="product-card__analog">Подобрать аналог
 											</button>
 											<button class="product-card__to-bookmarks" title="В закладки">
 												<svg class="icon icon-bookmarks ">
@@ -1786,12 +1765,9 @@
 												</svg>
 											</button>
 										</div>
-										<button class="product-card__to-buy" title="Купить в один клик">
-											<svg class="icon icon-oneclick ">
-												<use xlink:href="img/svg/sprite.svg#oneclick"></use>
-											</svg><span>Купить в 1 клик</span>
+										<button class="product-card__notify">Сообщить о поступлении
 										</button>
-										<div class="product-card__availability">В наличии
+										<div class="product-card__unavailability">Нет наличии
 										</div>
 									</div>
 								</div>
@@ -1831,10 +1807,7 @@
 									</div>
 									<div class="product-card__buttons">
 										<div class="product-card__add-buttons">
-											<button class="product-card__to-cart">
-												<svg class="icon icon-cartplus ">
-													<use xlink:href="img/svg/sprite.svg#cartplus"></use>
-												</svg><span>В корзину</span>
+											<button class="product-card__analog">Подобрать аналог
 											</button>
 											<button class="product-card__to-bookmarks" title="В закладки">
 												<svg class="icon icon-bookmarks ">
@@ -1847,12 +1820,9 @@
 												</svg>
 											</button>
 										</div>
-										<button class="product-card__to-buy" title="Купить в один клик">
-											<svg class="icon icon-oneclick ">
-												<use xlink:href="img/svg/sprite.svg#oneclick"></use>
-											</svg><span>Купить в 1 клик</span>
+										<button class="product-card__notify">Сообщить о поступлении
 										</button>
-										<div class="product-card__availability">В наличии
+										<div class="product-card__unavailability">Нет наличии
 										</div>
 									</div>
 								</div>
@@ -1922,7 +1892,7 @@
 					</div>
 				</div>
 			</section>
-			<!-- end sBlogSlider-->
+			<!-- end sHit-->
 			<footer class="footer">
 				<div class="container">
 					<div class="footer__top row">
