--- a/public/03-blog-item.html
+++ b/public/03-blog-item.html
@@ -447,43 +447,45 @@
 					<h1>Уход за триммером для травы: правила и рекомендации</h1>
 				</div>
 			</div>
-			<div class="container">
+			<div class="container page-container">
 				<div class="row">
-					<div class="col-lg-auto">
-						<!-- start sBlogNav-->
-						<section class="sBlogNav section hc-container" id="sBlogNav">
-							<div class="sBlogNav__sticky-wrap sBlogNav__sticky-wrap--js">
-								<div class="sBlogNav__title sBlogNav__title--js">Содержание
-									<svg class="icon icon-chevron-down ">
-										<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
-									</svg>
-								</div>
-								<nav class="blog-nav custom-scroll" title="Содеражние статьи">
-									<ul class="blog-nav__list nav">
-										<li class="blog-nav__item"><a class="blog-nav__link" href="#blog-nav-1">Приготовление бензиново-масляной смеси</a></li>
-										<li class="blog-nav__item"><a class="blog-nav__link" href="#blog-nav-2">Обкатка двигателя&nbsp;&mdash; почему это важно?</a></li>
-										<li class="blog-nav__item"><a class="blog-nav__link" href="#blog-nav-3">Выбор масла для редуктора</a></li>
-										<li class="blog-nav__item"><a class="blog-nav__link" href="#blog-nav-4">Обслуживание триммера в&nbsp;домашних условиях</a>
-											<ul>
-												<li><a href="#blog-nav-5">Двигатель</a></li>
-												<li><a href="#blog-nav-6">Режущий механизм</a></li>
-												<li><a href="#blog-nav-7">Шпуля с&nbsp;леской</a></li>
-												<li><a href="#blog-nav-8">Редуктор</a></li>
-												<li><a href="#blog-nav-9">Защитный кожух</a></li>
-											</ul>
-										</li>
-										<li class="blog-nav__item"><a class="blog-nav__link" href="#blog-nav-10">Триммер не&nbsp;заводится&nbsp;&mdash; что делать?</a></li>
-										<li class="blog-nav__item"><a class="blog-nav__link" href="#blog-nav-11">Типичные поломки и&nbsp;способы их&nbsp;устранения</a></li>
-										<li class="blog-nav__item"><a class="blog-nav__link" href="#blog-nav-12">Как продлить срок службы триммера?</a></li>
-									</ul>
-								</nav>
+					<div class="col-xxl-2 col-lg-3">
+						<div class="sidebar hc-container">
+							<div class="sidebar__mob-title">Содержание
+								<svg class="icon icon-chevron-down ">
+									<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
+								</svg>
 							</div>
-						</section>
-						<!-- end sBlogNav-->
+							<div class="sidebar__body d-lg-block">
+								<div class="sticky-wrap sticky-wrap--js">
+									<div class="sticky-wrap__title d-none d-lg-block">Содержание 
+									</div>
+									<nav class="blog-nav custom-scroll" title="Содеражние статьи">
+										<ul class="blog-nav__list nav">
+											<li class="blog-nav__item"><a class="blog-nav__link" href="#blog-nav-1">Приготовление бензиново-масляной смеси</a></li>
+											<li class="blog-nav__item"><a class="blog-nav__link" href="#blog-nav-2">Обкатка двигателя&nbsp;&mdash; почему это важно?</a></li>
+											<li class="blog-nav__item"><a class="blog-nav__link" href="#blog-nav-3">Выбор масла для редуктора</a></li>
+											<li class="blog-nav__item"><a class="blog-nav__link" href="#blog-nav-4">Обслуживание триммера в&nbsp;домашних условиях</a>
+												<ul>
+													<li><a href="#blog-nav-5">Двигатель</a></li>
+													<li><a href="#blog-nav-6">Режущий механизм</a></li>
+													<li><a href="#blog-nav-7">Шпуля с&nbsp;леской</a></li>
+													<li><a href="#blog-nav-8">Редуктор</a></li>
+													<li><a href="#blog-nav-9">Защитный кожух</a></li>
+												</ul>
+											</li>
+											<li class="blog-nav__item"><a class="blog-nav__link" href="#blog-nav-10">Триммер не&nbsp;заводится&nbsp;&mdash; что делать?</a></li>
+											<li class="blog-nav__item"><a class="blog-nav__link" href="#blog-nav-11">Типичные поломки и&nbsp;способы их&nbsp;устранения</a></li>
+											<li class="blog-nav__item"><a class="blog-nav__link" href="#blog-nav-12">Как продлить срок службы триммера?</a></li>
+										</ul>
+									</nav>
+								</div>
+							</div>
+						</div>
 					</div>
-					<div class="col">
+					<div class="col-xxl-10 col-lg-9">
 						<!-- start sArticle-->
-						<section class="sArticle section scrollspy-example" id="sArticle" data-bs-spy="scroll" data-bs-target=".sBlogNav" data-bs-offset="0" tabindex="0">
+						<section class="sArticle section" id="sArticle">
 							<p>Красивый ухоженный газон, аккуратно подстриженная лужайка&nbsp;&mdash; это результат использования триммера для травы. При помощи этого инструмента можно быстро привести участок в&nbsp;порядок. В&nbsp;отличие от&nbsp;газонокосилки небольшой и&nbsp;маневренный инструмент легко проникает в&nbsp;труднодоступные места (вокруг деревьев, возле забора, скамеек). Как и&nbsp;любая другая техника, триммер нуждается в&nbsp;грамотном уходе и&nbsp;обслуживании.</p>
 							<p>Срок службы и&nbsp;работоспособность бензокосы зависит от&nbsp;того, соблюдает&nbsp;ли пользователь правила эксплуатации. Вся информация, которая может потребоваться владельцу, размещена в&nbsp;руководстве. Обязательно изучите этот документ перед тем, как приступать к&nbsp;работе с&nbsp;триммером. А&nbsp;в&nbsp;этой статье остановимся на&nbsp;рассмотрении главных вопросов, касающихся использования инструмента.</p>
 							<h2 id="blog-nav-1">Приготовление бензиново-масляной смеси</h2>
