--- a/public/07-service-center-11.html
+++ b/public/07-service-center-11.html
@@ -449,44 +449,46 @@
 			</div>
 			<div class="container page-container">
 				<div class="row">
-					<div class="col-xl-2 col-lg-3">
+					<div class="col-xxl-2 col-lg-3">
 						<div class="sidebar">
 							<div class="sidebar__mob-title">Содержание
 								<svg class="icon icon-chevron-down ">
 									<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
 								</svg>
 							</div>
-							<ul>
-								<li><a href="#">Сервис</a>
-								</li>
-								<li><a href="#">Ремонт аэраторов, скарификаторов и вертикуттеров</a>
-								</li>
-								<li><a href="#">Ремонт бензопил</a>
-								</li>
-								<li><a href="#">Ремонт газонокосилок</a>
-								</li>
-								<li><a href="#">Ремонт генераторов и электростанций</a>
-								</li>
-								<li><a href="#">Ремонт измельчителей</a>
-								</li>
-								<li><a href="#">Ремонт кусторезов</a>
-								</li>
-								<li><a href="#">Ремонт минитракторов и райдеров</a>
-								</li>
-								<li><a href="#">Ремонт мотопомп</a>
-								</li>
-								<li><a href="#">Ремонт садовых опрыскивателей</a>
-								</li>
-								<li><a class="active" href="#">Ремонт садовых пылесосов и воздуходувок</a>
-								</li>
-								<li><a href="#">Ремонт снегоуборщиков</a>
-								</li>
-								<li><a href="#">Ремонт триммеров</a>
-								</li>
-							</ul>
+							<div class="sidebar__body d-lg-block">
+								<ul>
+									<li><a href="#">Сервис</a>
+									</li>
+									<li><a href="#">Ремонт аэраторов, скарификаторов и вертикуттеров</a>
+									</li>
+									<li><a href="#">Ремонт бензопил</a>
+									</li>
+									<li><a href="#">Ремонт газонокосилок</a>
+									</li>
+									<li><a href="#">Ремонт генераторов и электростанций</a>
+									</li>
+									<li><a href="#">Ремонт измельчителей</a>
+									</li>
+									<li><a href="#">Ремонт кусторезов</a>
+									</li>
+									<li><a href="#">Ремонт минитракторов и райдеров</a>
+									</li>
+									<li><a href="#">Ремонт мотопомп</a>
+									</li>
+									<li><a href="#">Ремонт садовых опрыскивателей</a>
+									</li>
+									<li><a class="active" href="#">Ремонт садовых пылесосов и воздуходувок</a>
+									</li>
+									<li><a href="#">Ремонт снегоуборщиков</a>
+									</li>
+									<li><a href="#">Ремонт триммеров</a>
+									</li>
+								</ul>
+							</div>
 						</div>
 					</div>
-					<div class="col-xl-10 col-lg-9">
+					<div class="col-xxl-10 col-lg-9">
 						<div class="mainside">
 							<!-- start sService-->
 							<div class="sService" id="sService">
