--- a/public/04-contacts.html
+++ b/public/04-contacts.html
@@ -447,22 +447,24 @@
 			</div>
 			<div class="container page-container">
 				<div class="row">
-					<div class="col-xl-2 col-lg-3">
+					<div class="col-xxl-2 col-lg-3">
 						<div class="sidebar">
 							<div class="sidebar__mob-title">Содержание
 								<svg class="icon icon-chevron-down ">
 									<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
 								</svg>
 							</div>
-							<ul>
-								<li><a href="#">FAQ</a>
-								</li>
-								<li><a href="#">Отзывы</a>
-								</li>
-							</ul>
+							<div class="sidebar__body d-lg-block">
+								<ul>
+									<li><a href="#">FAQ</a>
+									</li>
+									<li><a href="#">Отзывы</a>
+									</li>
+								</ul>
+							</div>
 						</div>
 					</div>
-					<div class="col-xl-10 col-lg-9">
+					<div class="col-xxl-10 col-lg-9">
 						<div class="mainside">
 							<!-- start sContact-->
 							<div class="sContact" id="sContact">
